# aws-image-tag

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: build.yml
src/: aws.rs  business.rs  config.rs  main.rs
