[package]
name = "aws-image-tag"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.3"
aws-sdk-ecr = {version = "0.28.0", features = ["rustls"]}
color-eyre = "0.6.2"
eyre = "0.6.8"
semver = "1.0.17"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = 'z'
lto = true

